# Lse2Text

./: .gitignore  README.md  config.py  datamodule.py  engine.py  main.py  model.py  models.py  pyproject.toml  train_dm.py
app/: __init__.py  main.py
app/core/: __init__.py  config.py  engine.py  evaluation.py  hands.py  lse_dm.py  model.py
app/models/: schemas.py
app/routers/: __init__.py  eval.py  predict.py  train.py
app/static/: index.css  index.js
app/templates/: index.html
metrics/: CnnV1.csv  Lse2TextModel_20250808_035505.csv  Lse2TextModel_20250808_035823.csv  Lse2TextModel_20250808_040428.csv  Lse2TextModel_20250808_041029.csv  cnn.csv  cv_metrics.csv  cv_results.csv  test_metrics.csv
src/: commands.py  config.py  engine.py  evaluation.py  lse_dm.py  main.py  models.py  train_dm.py
