[project]
name = "Lse2Text"
version = "0.1.0"
description = "Deep learning program that translates Spanish Sign Language (LSE) to text in real time."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi[all]>=0.116.1",
  "lightning[extra]>=2.5.2",
  "matplotlib>=3.10.3",
  "numpy>=2.3.2",
  "onnx>=1.18.0",
  "onnxruntime>=1.22.1",
  "pandas>=2.3.1",
  "pydantic>=2.11.7",
  "requests>=2.32.4",
  "scikit-learn>=1.7.1",
  "torch>=2.7.1",
  "torchmetrics[visual]>=1.8.0",
  "torchvision>=0.22.1",
]
authors = [{ name = "Paco Algar Muñoz" }]

[dependency-groups]
dev = ["mlflow>=3.2.0"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
